# backend/config/routes.rb
@@ -5,16 +5,22 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       devise_for :users,
-                 path: "",
-                 path_names: {
-                   sign_in: "login",
-                   sign_out: "logout",
-                   registration: "signup"
-                 },
-                 controllers: {
-                   sessions: "api/v1/sessions",
-                   registrations: "api/v1/registrations"
-                 }
+        path: "",
+        path_names: {
+          sign_in: "login",
+          sign_out: "logout",
+          registration: "signup"
+        },
+        controllers: {
+          sessions: "api/v1/sessions",
+          registrations: "api/v1/registrations"
+        }
+
+      devise_scope :user do
+        post "login_with_phone", to: "sessions#login_with_phone"
+        post "verify_otp", to: "sessions#verify_otp"
+      end
+      
       post "/refresh", to: "tokens#refresh"
       resources :campaigns do
         member do
